--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2355,9 +2355,9 @@ body.is-preload #wrapper {
 		content: '';
 		width: 12px;
 		height: 12px;
-		background: #6fc173;
+		background: #F74354;
 		position: absolute;
-		left: 116px;
+		left: 115px;
 		top: 28px;
 		border-radius: 100%;
 	}
