--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
-@import url("fontawesome-all.min.css");
-
-/*
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html,
 body,
@@ -2330,7 +2322,7 @@ body.is-preload #wrapper {
 	margin-bottom: 60px;
 }
 
-/* for Desktop */
+/* for Desktop 當是窗框度大於640PX */
 @media (min-width : 640px) {
 	.timeline>li {
 		overflow: hidden;
@@ -2358,6 +2350,39 @@ body.is-preload #wrapper {
 		background: #F74354;
 		position: absolute;
 		left: 115px;
+		top: 28px;
+		border-radius: 100%;
+	}
+}
+
+/* for Desktop 當是窗框度大於1680PX */
+@media (min-width : 1680px) {
+	.timeline>li {
+		overflow: hidden;
+		margin: 0;
+		position: relative;
+	}
+
+	.timeline-date {
+		width: 110px;
+		float: left;
+		margin-top: 20px;
+	}
+
+	.timeline-content {
+		width: 75%;
+		float: left;
+		border-left: 3px #e5e5d1 solid;
+		padding-left: 30px;
+	}
+
+	.timeline-content:before {
+		content: '';
+		width: 12px;
+		height: 12px;
+		background: #F74354;
+		position: absolute;
+		left: 118px;
 		top: 28px;
 		border-radius: 100%;
 	}
