--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,6 +152,22 @@ textarea {
 	appearance: none;
 }
 
+/* Logo */
+.logo{
+	display: flex;
+	padding: 20px;
+	height: 10%;
+
+
+}
+
+
+
+
+
+
+
+
 /* Row */
 
 .row {
