--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,6 +156,7 @@ textarea {
 #logo{
 	display: flex;
     width: 45em;
+	max-width: 100%;
 	height: 47px;
 	margin: auto;
 }
@@ -2010,7 +2011,7 @@ ul.actions li:first-child {
 	width: 45em;
 	margin: 0 auto;
 	max-width: 100%;
-	padding: 4em 0;
+	padding: 2em 0;
 	display: -moz-flex;
 	display: -webkit-flex;
 	display: -ms-flex;
@@ -2396,3 +2397,11 @@ body.is-preload #wrapper {
 		border-radius: 100%;
 	}
 }
+
+/*
+#side{
+	height: 20px;
+	width: auto;
+	overflow:hidden; 
+}
+*/
